HW-W02-D03-Game-Of-Thrones

--- a/GOT-Web-Page/index.html
+++ b/GOT-Web-Page/index.html
@@ -20,26 +20,40 @@
         <div class="character">
           <h3>Daenerys Targaryen</h3>
           <img src="./img/daenerys_targaryan.png" alt="daenerys_targaryan" />
+          <p class="info"></p>
+
+          <button class="more-info">More Info</button>
         </div>
         <div class="character">
           <h3>Khal Drogo</h3>
           <img src="./img/khal_drogo.jpg" alt="khal_drogo" />
+          <p class="info"></p>
+          <button class="more-info">More Info</button>
         </div>
         <div class="character">
           <h3>Tyrion Lannister</h3>
           <img src="./img/tyrian_lannister.png" alt="tyrian_lannister" />
+          <p class="info"></p>
+          <button class="more-info">More Info</button>
         </div>
         <div class="character">
           <h3>Sansa Stark</h3>
           <img src="./img/sansa_stark.jpg" alt="sansa_stark" />
+          <p class="info"></p>
+          <button class="more-info">More Info</button>
         </div>
         <div class="character">
           <h3>Arya Stark</h3>
           <img src="./img/arya_stark.jpg" alt="arya_stark" />
+          <p class="info"></p>
+
+          <button class="more-info">More Info</button>
         </div>
         <div class="character">
           <h3>Jon Snow</h3>
           <img src="./img/jon_snow.jpg" alt="jon_snow" />
+          <p class="info"></p>
+          <button class="more-info">More Info</button>
         </div>
       </div>
     </main>
